TARA2-28 - get and verify id-token. Redirect back to EidasNode.